hyperref fix (links are back)

--- a/make.tex
+++ b/make.tex
@@ -13,6 +13,17 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{thmtools}
+\declaretheorem[style=definition,qed=\(\lrcorner\),parent=subsection]{axiom}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{corollary}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{definition}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{discussion}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{example}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{exercise}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{lemma}
+\declaretheorem[style=definition,qed=\(\lrcorner\),numbered=no]{note}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{proposition}
+\declaretheorem[style=definition,qed=\(\lrcorner\),numbered=no]{remark}
+\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{theorem}
 %\usepackage{mathrsfs} % Example: \mathscr{A}
 %\usepackage{siunitx}
 \usepackage[all,error]{onlyamsmath}
@@ -43,7 +54,7 @@
 %\usepackage[charter]{mathdesign}
 %%%%%%%%%%%%%%%%%%%% Packages (continued)
 \usepackage{microtype}
-%\usepackage[hidelinks]{hyperref} % Must be last package, except for ellipsis.
+\usepackage{hyperref} % Must be last package, except for ellipsis.
 \usepackage{cleveref} % Must be after hyperref
 \usepackage{ellipsis}
 %%%%%%%%%%%%%%%%%%%% Document information
@@ -51,7 +62,7 @@
 %\author{AuthorOfDocument}
 %\date{\today{}} % Uncomment and leave this empty to have no date
 %%%%%%%%%%%%%%%%%%%% Custom commands
-\newcommand{\url}[1]{\texttt{#1}}
+%\newcommand{\url}[1]{\texttt{#1}}
 \newcommand{\strong}[1]{\textbf{#1}} % See the Wikipedia article on ``Separation of concerns'' and ``Separation of presentation and content''
 \newcommand{\term}[1]{\textbf{#1}}
 \newcommand{\IFF}{\ensuremath{\leftrightarrow}}
@@ -61,17 +72,6 @@
 \newcommand{\CHESS}{\emph{CHESS}}
 \newcommand{\derive}[2]{\ensuremath{#1\vdash #2}}
 %%%%%%%%%%%%%%%%%%%% For maths
-\declaretheorem[style=definition,qed=\(\lrcorner\),parent=subsection]{axiom}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{corollary}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{definition}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{discussion}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{example}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{exercise}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{lemma}
-\declaretheorem[style=definition,qed=\(\lrcorner\),numbered=no]{note}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{proposition}
-\declaretheorem[style=definition,qed=\(\lrcorner\),numbered=no]{remark}
-\declaretheorem[style=definition,qed=\(\lrcorner\),sibling=axiom]{theorem}
 \crefname{axiom}{axiom}{axioms}
 \crefname{corollary}{corollary}{corollaries}
 \crefname{definition}{definition}{definitions}
